cart page update

--- a/pages/cart/cart.html
+++ b/pages/cart/cart.html
@@ -224,17 +224,30 @@
             <div class="order-container">
                 <h5>ĐƠN HÀNG</h5>
                 <div class="divider"></div>
-
-                <div class="product">
-                    <img src="https://i.pinimg.com/originals/c0/91/be/c091befb0af3d0268d82d68fcfe146f1.jpg" alt="phil">
-
+                <div class="voucher-container">
+                    <p>NHẬP MÃ KHUYẾN MÃI</p>
+                    <div class="voucher-input">
+                        <input type="text" class="form-control" id="voucher-input">
+                        <button>ÁP DỤNG</button>
+                    </div>
                 </div>
                 <div class="product-divider"></div>
-                <div class="product">
-                    <img src="https://i.pinimg.com/originals/c0/91/be/c091befb0af3d0268d82d68fcfe146f1.jpg" alt="phil">
-
+                <div class="calc-price">
+                    <div>
+                        <p>Đơn hàng</p>
+                        <p>Giảm</p>
+                    </div>
+                    <div>
+                        <p id="price" style="text-align: right">965.000 VND</p>
+                        <p id="sale" style="text-align: right">87.000 VND</p>
+                    </div>
                 </div>
-                <div class="divider"></div>
+                <div class="product-divider"></div>
+                <div class="total-price">
+                    <p>TẠM TÍNH</p>
+                    <p id="total-price" style="text-align: right;font-size: 20px">878.000 VND</p>
+                </div>
+                <button class="payment-button">TIẾP TỤC THANH TOÁN</button>
 
             </div>
         </div>
