update pages layout

--- a/pages/account/forgot-password.html
+++ b/pages/account/forgot-password.html
@@ -115,20 +115,22 @@
 </section>
 
 <div class="container my-5">
-    <div class="login-container">
-        <h3>Quên mật khẩu</h3>
-        <p>Hãy nhập số điện thoại/email của bạn vào bên dưới để bắt đầu quá trình khôi phục mật khẩu.</p>
-        <form>
-            <div class="field">
-                <input type="text" id="user-email" placeholder="Nhập email / số điện thoại để khôi phục mật khẩu" required onblur="validateInput('user-email')">
-                <label for="user-email" id="user-email-label">email / số điện thoại</label>
-                <p id="user-email-error" class="error-message"></p>
-            </div>
+    <div class="row">
+        <div class="login-container col-12 col-md-8">
+            <h3>Quên mật khẩu</h3>
+            <p>Hãy nhập số điện thoại/email của bạn vào bên dưới để bắt đầu quá trình khôi phục mật khẩu.</p>
+            <form>
+                <div class="field">
+                    <input type="text" id="user-email" placeholder="Nhập email / số điện thoại để khôi phục mật khẩu" required onblur="validateInput('user-email')">
+                    <label for="user-email" id="user-email-label">email / số điện thoại</label>
+                    <p id="user-email-error" class="error-message"></p>
+                </div>
 
-            <button type="submit" class="btn-login" id="forgot-password-btn">Khôi phục mật khẩu</button>
-        </form>
-        <div class="footer-links">
-            <p>Ban chưa có tài khoản? <a href="register.html" class="text-link">Đăng ký ngay</a></p>
+                <button type="submit" class="btn-login" id="forgot-password-btn">Khôi phục mật khẩu</button>
+            </form>
+            <div class="footer-links">
+                <p>Ban chưa có tài khoản? <a href="register.html" class="text-link">Đăng ký ngay</a></p>
+            </div>
         </div>
     </div>
 </div>
