--- a/pages/cart/cart.html
+++ b/pages/cart/cart.html
@@ -116,7 +116,7 @@
 
 <div class="container my-5">
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-12 col-md-8">
             <h5 style="padding-top: 20px">BẠN CÓ CẦN THÊM?</h5>
             <div class="divider"></div>
 
@@ -220,7 +220,7 @@
                 <div class="divider"></div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-12 col-md-4">
             <div class="order-container">
                 <h5>ĐƠN HÀNG</h5>
                 <div class="divider"></div>
