--- a/pages/account/login.html
+++ b/pages/account/login.html
@@ -115,39 +115,41 @@
 </section>
 
 <div class="container my-5">
-    <div class="login-container">
-        <h3>Đăng nhập với</h3>
-        <div class="social-buttons">
-            <button class="btn-social">
-                <img src="../../assets/images/logo/google-logo.png" alt="Google" style="width: 20px; height: 20px;">
-                &nbsp;Google
-            </button>
-            <button class="btn-social">
-                <img src="../../assets/images/logo/zalo-logo.png" alt="Zalo" style="width: 20px; height: 20px;">
-                &nbsp;Zalo
-            </button>
-        </div>
-        <div class="divider">hoặc</div>
-        <form>
-            <div class="field">
-                <input type="text" id="user-number" placeholder="Nhập số điện thoại" required onblur="validateInput('user-number')">
-                <label for="user-number" id="user-number-label">Số điện thoại</label>
-                <p id="user-number-error" class="error-message"></p>
+    <div class="row">
+        <div class="login-container col-12 col-md-8">
+            <h3>Đăng nhập với</h3>
+            <div class="social-buttons">
+                <button class="btn-social">
+                    <img src="/assets/images/logo/google-logo.png" alt="Google" style="width: 20px; height: 20px;">
+                    &nbsp;Google
+                </button>
+                <button class="btn-social">
+                    <img src="/assets/images/logo/zalo-logo.png" alt="Zalo" style="width: 20px; height: 20px;">
+                    &nbsp;Zalo
+                </button>
             </div>
+            <div class="divider">hoặc</div>
+            <form>
+                <div class="field">
+                    <input type="text" id="user-number" placeholder="Nhập số điện thoại" required onblur="validateInput('user-number')">
+                    <label for="user-number" id="user-number-label">Số điện thoại</label>
+                    <p id="user-number-error" class="error-message"></p>
+                </div>
 
-            <div class="field">
-                <input type="password" id="user-password" placeholder="Nhập mật khẩu" required onblur="validateInput('user-password')">
-                <label for="user-password" id="user-password-label">Mật khẩu</label>
-                <p id="user-password-error" class="error-message"></p>
-            </div>
+                <div class="field">
+                    <input type="password" id="user-password" placeholder="Nhập mật khẩu" required onblur="validateInput('user-password')">
+                    <label for="user-password" id="user-password-label">Mật khẩu</label>
+                    <p id="user-password-error" class="error-message"></p>
+                </div>
 
-            <div style="text-align: right; margin-bottom: 15px;">
-                <a href="forgot-password.html" class="forgot-password">Quên mật khẩu?</a>
+                <div style="text-align: right; margin-bottom: 15px;">
+                    <a href="forgot-password.html" class="forgot-password">Quên mật khẩu?</a>
+                </div>
+                <button type="submit" class="btn-login" id="login-btn">Đăng nhập</button>
+            </form>
+            <div class="footer-links">
+                <p>Ban chưa có tài khoản? <a href="register.html" class="text-link">Đăng ký ngay</a></p>
             </div>
-            <button type="submit" class="btn-login" id="login-btn">Đăng nhập</button>
-        </form>
-        <div class="footer-links">
-            <p>Ban chưa có tài khoản? <a href="register.html" class="text-link">Đăng ký ngay</a></p>
         </div>
     </div>
 </div>
