--- a/pages/account/register.html
+++ b/pages/account/register.html
@@ -117,62 +117,64 @@
     </section>
 
     <div class="container my-5">
-        <div class="login-container">
-            <h3>Đăng ký với</h3>
-            <div class="social-buttons">
-                <button class="btn-social">
-                    <img src="/assets/images/logo/google-logo.png" alt="Google" style="width: 20px; height: 20px;">
-                    &nbsp;Google
-                </button>
-                <button class="btn-social">
-                    <img src="/assets/images/logo/zalo-logo.png" alt="Zalo" style="width: 20px; height: 20px;">
-                    &nbsp;Zalo
-                </button>
-            </div>
-            <div class="divider">hoặc</div>
-            <form>
-                <div class="field">
-                    <input type="text" id="user-name" placeholder="Nhập họ và tên" required
-                        onblur="validateInput('user-name')">
-                    <label for="user-name" id="user-name-label">Họ và tên</label>
-                    <p id="user-name-error" class="error-message"></p>
+        <div class="row">
+            <div class="login-container col-12 col-md-8">
+                <h3>Đăng ký với</h3>
+                <div class="social-buttons">
+                    <button class="btn-social">
+                        <img src="/assets/images/logo/google-logo.png" alt="Google" style="width: 20px; height: 20px;">
+                        &nbsp;Google
+                    </button>
+                    <button class="btn-social">
+                        <img src="/assets/images/logo/zalo-logo.png" alt="Zalo" style="width: 20px; height: 20px;">
+                        &nbsp;Zalo
+                    </button>
                 </div>
-                <div class="field">
-                    <input type="text" id="user-number" placeholder="Nhập số điện thoại" required
-                        onblur="validateInput('user-number')">
-                    <label for="user-number" id="user-number-label">Số điện thoại</label>
-                    <p id="user-number-error" class="error-message"></p>
-                </div>
-                <div class="field">
-                    <!--không bắt buộc email để đăng kí tài khoản-->
-                    <input type="text" id="user-email" placeholder="Nhập email">
-                    <label for="user-email" id="user-email-label">Email</label>
-                    <p id="user-email-error" class="error-message"></p>
-                </div>
-                <div class="field">
-                    <input type="text" id="user-birthday" placeholder="Ngày sinh" required
-                        onblur="validateInput('user-birthday')">
-                    <label for="user-birthday" id="user-birthday-label">Ngày sinh</label>
-                    <p id="user-birthday-error" class="error-message"></p>
-                </div>
-                <div class="field">
-                    <input type="password" id="user-password" placeholder="Nhập mật khẩu" required
-                        onblur="validateInput('user-password')">
-                    <label for="user-password" id="user-password-label">Mật khẩu</label>
-                    <p id="user-password-error" class="error-message"></p>
-                </div>
-                <div class="field">
-                    <input type="password" id="user-confirm-password" placeholder="Nhập lại mật khẩu" required
-                        onblur="validateInput('user-confirm-password')">
-                    <label for="user-confirm-password" id="user-confirm-password-label">Nhập lại mật khẩu</label>
-                    <p id="user-confirm-password-error" class="error-message"></p>
-                </div>
+                <div class="divider">hoặc</div>
+                <form>
+                    <div class="field">
+                        <input type="text" id="user-name" placeholder="Nhập họ và tên" required
+                               onblur="validateInput('user-name')">
+                        <label for="user-name" id="user-name-label">Họ và tên</label>
+                        <p id="user-name-error" class="error-message"></p>
+                    </div>
+                    <div class="field">
+                        <input type="text" id="user-number" placeholder="Nhập số điện thoại" required
+                               onblur="validateInput('user-number')">
+                        <label for="user-number" id="user-number-label">Số điện thoại</label>
+                        <p id="user-number-error" class="error-message"></p>
+                    </div>
+                    <div class="field">
+                        <!--không bắt buộc email để đăng kí tài khoản-->
+                        <input type="text" id="user-email" placeholder="Nhập email">
+                        <label for="user-email" id="user-email-label">Email</label>
+                        <p id="user-email-error" class="error-message"></p>
+                    </div>
+                    <div class="field">
+                        <input type="text" id="user-birthday" placeholder="Ngày sinh" required
+                               onblur="validateInput('user-birthday')">
+                        <label for="user-birthday" id="user-birthday-label">Ngày sinh</label>
+                        <p id="user-birthday-error" class="error-message"></p>
+                    </div>
+                    <div class="field">
+                        <input type="password" id="user-password" placeholder="Nhập mật khẩu" required
+                               onblur="validateInput('user-password')">
+                        <label for="user-password" id="user-password-label">Mật khẩu</label>
+                        <p id="user-password-error" class="error-message"></p>
+                    </div>
+                    <div class="field">
+                        <input type="password" id="user-confirm-password" placeholder="Nhập lại mật khẩu" required
+                               onblur="validateInput('user-confirm-password')">
+                        <label for="user-confirm-password" id="user-confirm-password-label">Nhập lại mật khẩu</label>
+                        <p id="user-confirm-password-error" class="error-message"></p>
+                    </div>
 
-                <button type="submit" class="btn-login" id="register-btn">Đăng ký</button>
-            </form>
+                    <button type="submit" class="btn-login" id="register-btn">Đăng ký</button>
+                </form>
 
-            <div class="footer-links">
-                <p>Ban đã có tài khoản? <a href="login.html" class="text-link">Đăng nhập ngay</a></p>
+                <div class="footer-links">
+                    <p>Ban đã có tài khoản? <a href="login.html" class="text-link">Đăng nhập ngay</a></p>
+                </div>
             </div>
         </div>
     </div>
