--- a/pages/cart/cart.html
+++ b/pages/cart/cart.html
@@ -124,13 +124,11 @@
             <div id="carouselExampleIndicators" class="carousel slide">
                 <div class="carousel-indicators" id="carouselIndicators"></div>
                 <div class="carousel-inner" id="carouselItems"></div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                        data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                        data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
@@ -367,13 +365,13 @@
 <script src="/assets/libraries/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
 <script>
     const slides = [
-        {src: "/assets/images/banners/slides/banner0.png", alt: "Slide 1"},
-        {src: "/assets/images/banners/slides/banner1.png", alt: "Slide 2"},
-        {src: "/assets/images/banners/slides/banner2.png", alt: "Slide 3"},
-        {src: "/assets/images/banners/slides/banner3.png", alt: "Slide 4"},
-        {src: "/assets/images/banners/slides/banner4.png", alt: "Slide 5"},
-        {src: "/assets/images/banners/slides/banner5.png", alt: "Slide 6"},
-        {src: "/assets/images/banners/slides/banner6.png", alt: "Slide 7"}
+        {src: "/assets/images/banners/slides/banner0.png", alt: "Slide 1", name: "Product Name 1", price: "$50"},
+        {src: "/assets/images/banners/slides/banner1.png", alt: "Slide 2", name: "Product Name 1", price: "$50"},
+        {src: "/assets/images/banners/slides/banner2.png", alt: "Slide 3", name: "Product Name 1", price: "$50"},
+        {src: "/assets/images/banners/slides/banner3.png", alt: "Slide 4", name: "Product Name 1", price: "$50"},
+        {src: "/assets/images/banners/slides/banner4.png", alt: "Slide 5", name: "Product Name 1", price: "$50"},
+        {src: "/assets/images/banners/slides/banner5.png", alt: "Slide 6", name: "Product Name 1", price: "$50"},
+        {src: "/assets/images/banners/slides/banner6.png", alt: "Slide 7", name: "Product Name 1", price: "$50"}
     ];
 
     // Các phần tử cần cập nhật
@@ -382,6 +380,66 @@
     const quantityInput = document.getElementById('quantityInput');
     const increaseBtn = document.getElementById('increaseBtn');
     const decreaseBtn = document.getElementById('decreaseBtn');
+
+    // Nhóm các sản phẩm thành các cặp cho mỗi slide
+    const groupedSlides = [];
+    for (let i = 0; i < slides.length; i += 2) {
+        groupedSlides.push(slides.slice(i, i + 2)); // Mỗi nhóm chứa 2 sản phẩm
+    }
+
+    groupedSlides.forEach((group, index) => {
+        // Tạo nút indicator
+        const indicatorButton = document.createElement('button');
+        indicatorButton.type = 'button';
+        indicatorButton.classList.add('carousel-indicator');
+        indicatorButton.setAttribute('data-bs-target', '#carouselExampleIndicators');
+        indicatorButton.setAttribute('data-bs-slide-to', index);
+        indicatorButton.setAttribute('aria-label', `Slide ${index + 1}`);
+        if (index === 0) indicatorButton.classList.add('active');
+        indicatorsContainer.appendChild(indicatorButton);
+
+        // Tạo slide item
+        const slideItem = document.createElement('div');
+        slideItem.classList.add('carousel-item');
+        if (index === 0) slideItem.classList.add('active');
+
+        // Thêm các sản phẩm vào slide
+        const slideContent = document.createElement('div');
+        slideContent.classList.add('row', 'gx-4'); // Bootstrap row với khoảng cách giữa các cột
+
+        group.forEach(product => {
+            const productDiv = document.createElement('div');
+            productDiv.classList.add('col-6', 'text-center'); // Mỗi sản phẩm chiếm 1/2 slide
+
+            const img = document.createElement('img');
+            img.src = product.src;
+            img.classList.add('col-4','img-fluid', 'rounded'); // Thêm các class Bootstrap
+            img.alt = product.alt;
+
+            const productName = document.createElement('h5');
+            productName.textContent = product.name;
+            productName.classList.add('product-name');
+
+            const productPrice = document.createElement('p');
+            productPrice.textContent = product.price;
+            productPrice.classList.add('product-price');
+
+            const button = document.createElement('button');
+            button.classList.add('btn', 'button-add');
+            button.textContent = 'Buy Now';
+
+            // Thêm các thành phần vào sản phẩm
+            productDiv.appendChild(img);
+            productDiv.appendChild(productName);
+            productDiv.appendChild(productPrice);
+            productDiv.appendChild(button);
+
+            slideContent.appendChild(productDiv);
+        });
+
+        slideItem.appendChild(slideContent);
+        itemsContainer.appendChild(slideItem);
+    });
 
     // Xử lý tăng số lượng
     increaseBtn.addEventListener('click', () => {
@@ -396,33 +454,6 @@
             quantityInput.value = currentValue - 1;
         }
     });
-
-    // Duyệt qua mảng slides và tạo các phần tử HTML
-    slides.forEach((slide, index) => {
-        // Tạo nút indicator
-        const indicatorButton = document.createElement('button');
-        indicatorButton.type = 'button';
-        indicatorButton.classList.add('carousel-indicator');
-        indicatorButton.setAttribute('data-bs-target', '#carouselExampleIndicators');
-        indicatorButton.setAttribute('data-bs-slide-to', index);
-        indicatorButton.setAttribute('aria-label', `Slide ${index + 1}`);
-        if (index === 0) indicatorButton.classList.add('active'); // Đánh dấu slide đầu tiên là active
-        indicatorsContainer.appendChild(indicatorButton);
-
-        // Tạo slide item
-        const slideItem = document.createElement('div');
-        slideItem.classList.add('carousel-item');
-        if (index === 0) slideItem.classList.add('active'); // Đánh dấu slide đầu tiên là active
-
-        const img = document.createElement('img');
-        img.src = slide.src;
-        img.classList.add('d-block', 'w-100');
-        img.alt = slide.alt;
-        slideItem.appendChild(img);
-
-        itemsContainer.appendChild(slideItem);
-    });
-
 
     // cập nhật text của button khi người dùng chọn size
     document.querySelectorAll('.dropdown-item').forEach(item => {
