--- a/pages/account/my-account.html
+++ b/pages/account/my-account.html
@@ -343,7 +343,7 @@
             </nav>
         </section>
     </header>
-    <main>
+    <main style="min-height: 700px;">
         <div class="container mt-4">
             <div class="row">
                 <!-- Sidebar -->
@@ -381,16 +381,10 @@
                             <p><strong>Điện thoại:</strong> 0375174172</p>
                         </div>
                         <div class="card-footer d-flex flex-column align-items-center">
-                            <a href="update-account.html" class="btn btn-primary text-black">Cập nhật thông tin tài
+                            <a href="edit-account.html" class="btn btn-primary text-black">Cập nhật thông tin tài
                                 khoản</a>
                         </div>
                     </div>
-                    <div class="alert alert-light border">
-                        Hạng thẻ tiếp theo <strong>Silver</strong> - chiết khấu 3% membership
-                        <br>
-                        <a href="#" class="text-decoration-none">Xem thêm chính sách khách hàng thân thiết.</a>
-                    </div>
-                    <p class="mt-3">Bạn chưa đặt mua sản phẩm.</p>
                 </div>
             </div>
         </div>
