--- a/pages/account/orders.html
+++ b/pages/account/orders.html
@@ -343,7 +343,8 @@
             </nav>
         </section>
     </header>
-    <main>
+    <main style="min-height: 700px;">
+
         <div class="container mt-4">
             <div class="row">
                 <!-- Sidebar -->
@@ -378,7 +379,6 @@
                                     <th>Ngày đặt</th>
                                     <th>Trạng thái</th>
                                     <th>Tổng tiền</th>
-                                    <th>Hành động</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -387,33 +387,18 @@
                                     <td>19/11/2024</td>
                                     <td><span class="badge bg-success">Hoàn thành</span></td>
                                     <td>1.200.000đ</td>
-                                    <td>
-                                        <a href="order-details.html?id=ORD001" class="btn btn-sm btn-primary">Chi
-                                            tiết</a>
-                                        <button class="btn btn-sm btn-danger">Hủy</button>
-                                    </td>
                                 </tr>
                                 <tr>
                                     <td>#ORD002</td>
                                     <td>18/11/2024</td>
                                     <td><span class="badge bg-warning">Đang xử lý</span></td>
                                     <td>850.000đ</td>
-                                    <td>
-                                        <a href="order-details.html?id=ORD002" class="btn btn-sm btn-primary">Chi
-                                            tiết</a>
-                                        <button class="btn btn-sm btn-danger">Hủy</button>
-                                    </td>
                                 </tr>
                                 <tr>
                                     <td>#ORD002</td>
                                     <td>10/11/2024</td>
                                     <td><span class="badge bg-danger">Đã hủy</span></td>
                                     <td>550.000đ</td>
-                                    <td>
-                                        <a href="order-details.html?id=ORD002" class="btn btn-sm btn-primary">Chi
-                                            tiết</a>
-                                        <button class="btn btn-sm btn-danger">Hủy</button>
-                                    </td>
                                 </tr>
                             </tbody>
                         </table>
