--- a/pages/account/edit-account.html
+++ b/pages/account/edit-account.html
@@ -343,7 +343,7 @@
             </nav>
         </section>
     </header>
-    <main>
+    <main style="min-height: 700px;">
 
         <div class="container mt-4">
             <div class="row">
