update cart page

--- a/pages/cart/cart.html
+++ b/pages/cart/cart.html
@@ -138,10 +138,10 @@
                 <h5>GIỎ HÀNG</h5>
                 <div class="product">
                     <div class="product-information">
-                        <img src="https://i.pinimg.com/originals/c0/91/be/c091befb0af3d0268d82d68fcfe146f1.jpg" alt="phil">
+                        <img src="https://vietthuong.vn/image/catalog/pearl/trong-pearl-export-lacquer-725-standard-c248.jpg" alt="pearl">
                         <div class="product-detail">
-                            <p class="product-name">Radiohead's Drumer Philip James Selway (born 23 May 1967)</p>
-                            <p class="product-price"><strong>Giá:</strong> 290.000 VND</p>
+                            <p class="product-name">PEARL Export Lacquer EXL725SP Standard</p>
+                            <p class="product-price"><strong>Giá:</strong> 11.990.000 VND</p>
                             <div class="product-option">
                                 <div class="option">
                                     <strong>Size</strong>
@@ -168,7 +168,7 @@
                         </div>
 
                         <div class="product-detail2">
-                            <p class="product-price">290.000VND</p>
+                            <p class="product-price">11.990.000 VND</p>
                             <p class="product-status">còn hàng</p>
                             <button class="favorite-button"></button>
                             <button class="delete-button"></button>
@@ -178,10 +178,10 @@
                 <div class="product-divider"></div>
                 <div class="product">
                     <div class="product-information">
-                        <img src="https://i.pinimg.com/originals/c0/91/be/c091befb0af3d0268d82d68fcfe146f1.jpg" alt="phil">
+                        <img src="https://vietthuong.vn/image/cache/catalog/alesis-turbo-mesh-kit-400x400.jpg" alt="digital drum">
                         <div class="product-detail">
-                            <p class="product-name" id="product-name">Radiohead's Drumer Philip James Selway (born 23 May 1967)</p>
-                            <p class="product-price"><strong>Giá:</strong> 290.000 VND</p>
+                            <p class="product-name" id="product-name">Alesis Turbo Mesh Kit</p>
+                            <p class="product-price"><strong>Giá:</strong> 7.990.000 VND</p>
                             <div class="product-option">
                                 <div class="option">
                                     <strong>Size</strong>
@@ -208,7 +208,7 @@
                         </div>
 
                         <div class="product-detail2">
-                            <p class="product-price">290.000VND</p>
+                            <p class="product-price">7.990.000 VND</p>
                             <p class="product-status">còn hàng</p>
                             <button class="favorite-button"></button>
                             <button class="delete-button"></button>
