--- a/pages/cart/checkout.html
+++ b/pages/cart/checkout.html
@@ -115,88 +115,8 @@
 <div class="container my-5">
     <div class="row">
         <div class="col-12 col-md-8">
-            <div class="cart-container">
-                <h5>GIỎ HÀNG</h5>
-                <div class="product">
-                    <div class="product-information">
-                        <img src="https://i.pinimg.com/originals/c0/91/be/c091befb0af3d0268d82d68fcfe146f1.jpg" alt="phil">
-                        <div class="product-detail">
-                            <p class="product-name">Radiohead's Drumer Philip James Selway (born 23 May 1967)</p>
-                            <p class="product-price"><strong>Giá:</strong> 290.000 VND</p>
-                            <div class="product-option">
-                                <div class="option">
-                                    <strong>Size</strong>
-                                    <div class="dropdown">
-                                        <button class="dropdown-toggle" id="dropdownMenuButton" type="button" data-bs-toggle="dropdown" aria-expanded="false">M</button>
-                                        <ul class="dropdown-menu p-3" aria-labelledby="dropdownMenuButton">
-                                            <li><a class="dropdown-item" href="#" data-size="S">S</a></li>
-                                            <li><a class="dropdown-item" href="#" data-size="M">M</a></li>
-                                            <li><a class="dropdown-item" href="#" data-size="L">L</a></li>
-                                            <li><a class="dropdown-item" href="#" data-size="XL">XL</a></li>
-                                            <li><a class="dropdown-item" href="#" data-size="XXL">XXL</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="option">
-                                    <strong>Số lượng</strong>
-                                    <div class="quantity-container">
-                                        <div id="decreaseBtn" class="quantity-button">-</div>
-                                        <input type="text" id="quantityInput" class="quantity-input" value="1" readonly>
-                                        <div id="increaseBtn" class="quantity-button">+</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+            <div class="checkout-container">
 
-                        <div class="product-detail2">
-                            <p class="product-price">290.000VND</p>
-                            <p class="product-status">còn hàng</p>
-                            <button class="favorite-button"></button>
-                            <button class="delete-button"></button>
-                        </div>
-                    </div>
-                </div>
-                <div class="product-divider"></div>
-                <div class="product">
-                    <div class="product-information">
-                        <img src="https://i.pinimg.com/originals/c0/91/be/c091befb0af3d0268d82d68fcfe146f1.jpg" alt="phil">
-                        <div class="product-detail">
-                            <p class="product-name" id="product-name">Radiohead's Drumer Philip James Selway (born 23 May 1967)</p>
-                            <p class="product-price"><strong>Giá:</strong> 290.000 VND</p>
-                            <div class="product-option">
-                                <div class="option">
-                                    <strong>Size</strong>
-                                    <div class="dropdown">
-                                        <button class="dropdown-toggle" id="dropdownMenuButton1" type="button" data-bs-toggle="dropdown" aria-expanded="false">M</button>
-                                        <ul class="dropdown-menu p-3" aria-labelledby="dropdownMenuButton">
-                                            <li><a class="dropdown-item" href="#" data-size="S">S</a></li>
-                                            <li><a class="dropdown-item" href="#" data-size="M">M</a></li>
-                                            <li><a class="dropdown-item" href="#" data-size="L">L</a></li>
-                                            <li><a class="dropdown-item" href="#" data-size="XL">XL</a></li>
-                                            <li><a class="dropdown-item" href="#" data-size="XXL">XXL</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="option">
-                                    <strong>Số lượng</strong>
-                                    <div class="quantity-container">
-                                        <div id="decreaseBtn1" class="quantity-button">-</div>
-                                        <input type="text" id="quantityInput1" class="quantity-input" value="1" readonly>
-                                        <div id="increaseBtn1" class="quantity-button">+</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="product-detail2">
-                            <p class="product-price">290.000VND</p>
-                            <p class="product-status">còn hàng</p>
-                            <button class="favorite-button"></button>
-                            <button class="delete-button"></button>
-                        </div>
-                    </div>
-                </div>
-                <div class="divider"></div>
             </div>
         </div>
         <div class="col-12 col-md-4">
