--- a/admin/index.html
+++ b/admin/index.html
@@ -2,49 +2,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <style>
-        body {
-            background-color: #f1f1f1;
-            font-family: Arial, sans-serif;
-        }
-        h1 {
-            color: #333;
-            text-align: center;
-        }
-        p {
-            color: #333;
-            text-align: center;
-        }
-        a {
-            display: block;
-            margin: 10px 0;
-            padding: 10px;
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            text-decoration: none;
-        }
-        a:hover {
-            background-color: #555;
-        }
-    </style>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Đăng Nhập</title>
+   <link rel="icon" href="/assets/images/logo.png" type="image/png">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+   <link rel="stylesheet" href="/assets/libraries/bootstrap-5.3.3-dist/css/bootstrap.min.css">
+   <link rel="stylesheet" href="/assets/css/custom.css">
+   <style>
+       body {
+           background-color: #f1f1f1;
+       }
+       .login-container {
+           max-width: 400px;
+           margin: 100px auto;
+           padding: 20px;
+           background-color: #fff;
+           border-radius: 8px;
+           box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+       }
+       .login-container h1 {
+           text-align: center;
+           margin-bottom: 20px;
+           color: var(--bs-primary);
+       }
+       .login-container .form-control {
+           margin-bottom: 15px;
+           border-radius: 20px;
+           padding: 10px;
+       }
+       .login-container .form-control:focus {
+           box-shadow: 0 0 10px var(--bs-primary);
+       }
+   </style>
 </head>
 <body>
-    <h1>Admin</h1>
-    <p>This is admin page</p>
-    <p>Dashboard</p>
-    <a href="/admin/users">Users</a>
-    <a href="/admin/posts">Posts</a>
-    <a href="/admin/comments">Comments</a>
-    <a href="/admin/categories">Categories</a>
-    <a href="/admin/tags">Tags</a>
-    <a href="/admin/roles">Roles</a>
-    <a href="/admin/roles">Roles</a>
-    <a href="/admin/permissions">Permissions</a>
-    <a href="/admin/roles">Roles</a>
-    <a href="/admin/settings">Settings</a>
-    <a href="/admin/logout">Logout</a>
-    Day la trang dashboard cua admin
+   <div class="login-container">
+       <h1>Đăng Nhập</h1>
+       <form action="/admin/dashboard" method="POST">
+           <div class="mb-3">
+               <label for="username" class="form-label">Email hoặc số điện thoại</label>
+               <input type="text" class="form-control" id="username" name="username" required>
+           </div>
+           <div class="mb-3">
+               <label for="password" class="form-label">Mật khẩu</label>
+               <input type="password" class="form-control" id="password" name="password" required>
+           </div>
+           <button type="submit" class="btn btn-primary w-100">Đăng nhập</button>
+       </form>
+       <div class="text-center mt-3">
+           <a href="/admin/forgot-password" class="text-decoration-none">Quên mật khẩu</a>
+       </div>
+   </div>
+   <script src="/assets/libraries/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
