--- a/pages/products/product-detail.html
+++ b/pages/products/product-detail.html
@@ -276,7 +276,7 @@
             <li>Kawai K-300 <span class="rating">★★★★★</span></li>
         </ul>
     </div>
-    
+
     <div class="container">
         <div class="product-detail container mt-4">
             <div class="row">
@@ -376,12 +376,21 @@
             <div class="col-md-6">
                 <div class="buy" style=" flex-direction: column; display: flex; ">
                     <h1>Kawai ND-21 <span class="text-muted">( Mã SP : ND-21 )</span></h1>
-                    <div 
-                        <p class="text-danger fw-bold">
-                            Giá: 93,000,000đ
-                            <span class="text-decoration-line-through text-muted">99,900,000đ</span>
-                            <span class="badge bg-danger">(-7%)</span>
+                    <div <p class="text-danger fw-bold">
+                        Giá: 93,000,000đ
+                        <span class="text-decoration-line-through text-muted">99,900,000đ</span>
+                        <span class="badge bg-danger">(-7%)</span>
                         </p>
+                    </div>
+
+                    <div class="rating-summary">
+                        <div class="d-flex align-items-center ">
+                            <h1 class="text-warning mb-0 ">4.8</h1>
+                            <div class="ms-2">
+                                <span class="rating">★★★★★</span>
+                                <span>(250 đánh giá)</span>
+                            </div>
+                        </div>
                     </div>
                     <!-- Màu sắc và Số lượng -->
                     <div style="display: flex;gap: 100px;">
@@ -433,6 +442,7 @@
 
         </div>
     </div>
+
     <div class="tab-container">
         <ul class="tab-menu">
             <li class="tab-item active" data-tab="tab1">Mô tả sản phẩm</li>
