update detail page

--- a/pages/products/product-detail.html
+++ b/pages/products/product-detail.html
@@ -471,6 +471,36 @@
             <p>Đây là nội dung của tab Video.</p>
         </div>
     </div>
+    <!-- Đánh giá và bình luận -->
+    <div class="container mt-5">
+        <h3>Đánh giá và Bình luận</h3>
+        <div class="rating-summary">
+            <div class="d-flex align-items-center">
+                <h1 class="text-warning mb-0">4.8</h1>
+                <div class="ms-2">
+                    <span class="rating">★★★★★</span>
+                    <span>(250 đánh giá)</span>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <form class="d-flex flex-column align-items-start">
+            <textarea class="form-control mb-2" style="width: 100%; height: 100px;"
+                placeholder="Chia sẻ cảm nhận chi tiết..."></textarea>
+            <div class="d-flex align-items-center">
+                <span class="me-2">Số sao:</span>
+                <select class="form-select form-select-sm me-2" style="width: auto;">
+                    <option value="5">5★</option>
+                    <option value="4">4★</option>
+                    <option value="3">3★</option>
+                    <option value="2">2★</option>
+                    <option value="1">1★</option>
+                </select>
+                <button type="submit" class="btn btn-primary btn-sm">Gửi</button>
+            </div>
+        </form>
+              
+    </div>
 
     </div>
     <footer>
