update detail page

--- a/pages/products/product-detail.html
+++ b/pages/products/product-detail.html
@@ -499,7 +499,25 @@
                 <button type="submit" class="btn btn-primary btn-sm">Gửi</button>
             </div>
         </form>
-              
+        <hr>
+        <h4>Bình luận</h4>
+        <div class="comment-list">
+            <div class="comment-item mb-3">
+                <strong>Nguyễn Phi Long</strong> <span class="text-muted">(2 ngày trước)</span>
+                <p class="mb-1">Rất tốt!</p>
+                <span class="rating" style="display: inline-block; margin-top: -5px;">★★★★★</span>
+            </div>
+            <div class="comment-item mb-3">
+                <strong>Phong Hoàng Thiện</strong> <span class="text-muted">(5 ngày trước)</span>
+                <p class="mb-1">Hài lòng.</p>
+                <span class="rating" style="display: inline-block; margin-top: -5px;">★★★★★</span>
+            </div>
+            <div class="comment-item mb-3">
+                <strong>Nguyễn Hữu Nam</strong> <span class="text-muted">(6 ngày trước)</span>
+                <p class="mb-1">Khá ổn.</p>
+                <span class="rating" style="display: inline-block; margin-top: -5px;">★★★★</span>
+            </div>
+        </div>        
     </div>
 
     </div>
