update detail page and add img

--- a/pages/products/product-detail.html
+++ b/pages/products/product-detail.html
@@ -273,7 +273,7 @@
             <li><a href="#">Đàn Piano Cơ</a></li>
             <li><a href="#">Đàn Piano Upright</a></li>
             <li><a href="#">Kawai</a></li>
-            <li>Kawai K-300 <span class="rating">★★★★★</span></li>
+            <li>Trống Tama Drum 5 Pcs <span class="rating">★★★★★</span></li>
         </ul>
     </div>
 
@@ -282,7 +282,7 @@
             <div class="row">
                 <!-- Hình ảnh sản phẩm -->
                 <div class="col-md-6">
-                    <h2>Kawai K-300 <small>(Mã SP: K-300-M/PEP)</small></h2>
+                    <h2>Trống Tama Drum 5 Pcs <small>(Mã SP: K-300-M/PEP)</small></h2>
                     <div class="badge bg-danger mb-2">Giảm 7%</div>
                     <div class="row">
                         <div class="col-12 text-center">
@@ -294,25 +294,25 @@
                                         <!-- Khung chứa ảnh lớn -->
                                         <div class="mb-4">
                                             <img id="mainImage"
-                                                src="../../assets/images/products/featured_products/dan-piano-kawai-k300-mau-den-sang-trong.jpg"
+                                                src="../../assets/images/products/product_detail.jpg"
                                                 alt="Ảnh lớn" class="main-img">
                                         </div>
 
                                         <!-- Khung chứa ảnh nhỏ -->
                                         <div class="thumbnail-container">
 
-                                            <img src="../../assets/images/products/featured_products/casio-cdp-s160-bk.jpg"
+                                            <img src="../../assets/images/products/color1.jpg"
                                                 alt="Ảnh nhỏ 1" class="thumb-img"
-                                                data-large="../../assets/images/products/featured_products/casio-cdp-s160-bk.jpg">
-                                            <img src="../../assets/images/products/featured_products/dan-piano-kawai-k300-mau-den-sang-trong.jpg"
+                                                data-large="../../assets/images/products/color1.jpg">
+                                            <img src="../../assets/images/products/color2.jpg"
                                                 alt="Ảnh nhỏ 2" class="thumb-img"
-                                                data-large="../../assets/images/products/featured_products/dan-piano-kawai-k300-mau-den-sang-trong.jpg">
-                                            <img src="../../assets/images/products/featured_products/dan-piano-kawai-k300-mau-den-sang-trong.jpg"
+                                                data-large="../../assets/images/products/color2.jpg">
+                                            <img src="../../assets/images/products/product_detail.jpg"
                                                 alt="Ảnh nhỏ 3" class="thumb-img"
-                                                data-large="../../assets/images/products/featured_products/casio-cdp-s160-bk.jpg">
-                                            <img src="../../assets/images/products/featured_products/dan-piano-kawai-k300-mau-den-sang-trong.jpg"
+                                                data-large="../../assets/images/products/product_detail.jpg">
+                                            <img src="../../assets/images/products/color3.jpg"
                                                 alt="Ảnh nhỏ 4" class="thumb-img"
-                                                data-large="https://via.placeholder.com/800x400/ffff00/ffffff?text=Ảnh+4">
+                                                data-large="../../assets/images/products/color3.jpg">
                                     </span>
                                 </a>
                                 <!-- Modal chứa Slideshow -->
@@ -321,7 +321,7 @@
                                     <div class="modal-dialog modal-lg">
                                         <div class="modal-content">
                                             <div class="modal-header">
-                                                <h5 class="modal-title" id="slideshowModalLabel">Slideshow</h5>
+                                                <h5 class="modal-title" id="slideshowModalLabel">Trống Tama Drum 5 Pcs</h5>
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                     aria-label="Close"></button>
                                             </div>
@@ -331,15 +331,15 @@
                                                     data-bs-ride="carousel" data-bs-interval="2000">
                                                     <div class="carousel-inner">
                                                         <div class="carousel-item active">
-                                                            <img src="https://via.placeholder.com/800x400?text=Image+1"
+                                                            <img src="../../assets/images/products/color1.jpg"
                                                                 class="d-block w-100" alt="Image 1">
                                                         </div>
                                                         <div class="carousel-item">
-                                                            <img src="https://via.placeholder.com/800x400?text=Image+2"
+                                                            <img src="../../assets/images/products/color2.jpg"
                                                                 class="d-block w-100" alt="Image 2">
                                                         </div>
                                                         <div class="carousel-item">
-                                                            <img src="https://via.placeholder.com/800x400?text=Image+3"
+                                                            <img src="../../assets/images/products/product_detail.jpg"
                                                                 class="d-block w-100" alt="Image 3">
                                                         </div>
                                                     </div>
@@ -375,7 +375,7 @@
             <!-- Thông tin sản phẩm -->
             <div class="col-md-6">
                 <div class="buy" style=" flex-direction: column; display: flex; ">
-                    <h1>Kawai ND-21 <span class="text-muted">( Mã SP : ND-21 )</span></h1>
+                    <h1>Trống Tama Drum 5 Pcs </h1>
                     <div <p class="text-danger fw-bold">
                         Giá: 93,000,000đ
                         <span class="text-decoration-line-through text-muted">99,900,000đ</span>
@@ -399,10 +399,12 @@
                             <label for="colorSelect" class="form-label">Màu sắc:</label>
                             <div>
                                 <span class="color-swatch bg-black me-2"
-                                    data-image="../../assets/images/products/featured_products/dan-piano-kawai-k300-mau-den-sang-trong.jpg"></span>
-                                <span class="color-swatch bg-brown me-2"
-                                    data-image="../../assets/images/products/featured_products/casio-cdp-s160-bk.jpg"></span>
-                                <span class="color-swatch bg-white"></span>
+                                    data-image="../../assets/images/products/color1.jpg"></span>
+                                <span class="color-swatch bg-white me-2"
+                                    data-image="../../assets/images/products/color2.jpg"></span>
+                                <span class="color-swatch bg-danger me-2"
+                                    data-image="../../assets/images/products/product_detail.jpg"></data-image>
+                                </span>
                             </div>
                         </div>
                         <!-- Số lượng -->
