--- a/pages/products/product-detail.html
+++ b/pages/products/product-detail.html
@@ -458,7 +458,7 @@
                 là piano Kawai K3, model K3 là cây đàn “Piano Acoustic” đạt danh hiệu cây đàn piano của năm trong
                 suốt 4 năm liên từ 2008 – 2011, do độc giả của tạp chí MMR tại Mỹ bình chọn.</p>
             </p>
-            <img src="/assets/images/products/featured_products/dan-piano-kawai-k300-mau-den-sang-trong.jpg" alt="">
+            <img src="/assets/images/products/product_detail.jpg" alt="">
         </div>
 
         <div class="tab-content" id="tab2" style="display: none;">
@@ -521,6 +521,57 @@
             </div>
         </div>        
     </div>
+    <hr>
+    <div class="container my-5">
+        <h3 class="mb-4">Sản phẩm tương tự</h3>
+        <div class="row">
+          <!-- Sản phẩm 1 -->
+          <div class="col-md-3 mb-4" >
+            <div class="card" style="width: 18rem; height: 25rem;">
+              <img src="../../assets/images/products/product_detail_4.jpg" class="card-img-top" alt="Sản phẩm 1" style="height: 220px; object-fit: cover;">
+              <div class="card-body">
+                <h5 class="card-title">Bộ trống Yamaha GIGMAKER GM2F52</h5>
+                <p class="card-text">Giá: 70,000,000đ</p>
+                <a href="#" class="btn btn-primary">Xem chi tiết</a>
+              </div>
+            </div>
+          </div>
+          <!-- Sản phẩm 2 -->
+          <div class="col-md-3 mb-4">
+            <div class="card" style="width: 18rem; height: 25rem;">
+              <img src="../../assets/images/products/product_detail_3.jpg" class="card-img-top" alt="Sản phẩm 2" style="height: 220px; object-fit: cover;">
+              <div class="card-body">
+                <h5 class="card-title">Trống Pearl Export 725</h5>
+                <p class="card-text">Giá: 25,000,000đ</p>
+                <a href="#" class="btn btn-primary">Xem chi tiết</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 mb-4">
+            <div class="card" style="width: 18rem; height: 25rem;">
+              <img src="../../assets/images/products/product_detail_2.jpg" class="card-img-top" alt="Sản phẩm 2" style="height: 220px; object-fit: cover;">
+              <div class="card-body">
+                <h5 class="card-title"> Trống Jinbao</h5>
+                <p class="card-text">Giá: 50,000,000đ</p>
+                <a href="#" class="btn btn-primary">Xem chi tiết</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 mb-4">
+            <div class="card" style="width: 18rem; height: 25rem;"  >
+              <img src="../../assets/images/products/product_detail_1.jpg" class="card-img-top" alt="Sản phẩm 4" style="height: 220px; object-fit: cover;">
+              <div class="card-body">
+                <h5 class="card-title">Trống điện tử Roland VAD507</h5>
+                <p class="card-text">Giá: 45,000,000đ</p>
+                <a href="#" class="btn btn-primary">Xem chi tiết</a>
+              </div>
+            </div>
+          </div>
+          
+          <!-- Thêm các sản phẩm khác tương tự -->
+        </div>
+      </div>
+      
 
     </div>
     <footer>
