update addresses page

--- a/pages/products/product-detail.html
+++ b/pages/products/product-detail.html
@@ -459,7 +459,7 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main style="margin-top: 50px;">
         <div class="container">
             <ul class="breadcrumb">
                 <li><a href="#">Trang chủ</a></li>
